# filament-spool-storage

./: LICENSE  README.md
3D models/: label connector.f3d  label connector.step  label.f3d  label.step  spool shaft holder.f3d  spool shaft holder.step
spool-label-generator/: README.md  cli.py  config-example.yaml  contants.py  filaments-example.csv  filaments-example.yaml  funcs.py  pyproject.toml  renderer.py  tools.py  types_.py
